# stapl-modern

./: CMakeLists.txt
include/stapl/: algorithm.hpp  container.hpp  executor.hpp  utility.hpp
tests/: CMakeLists.txt  test_algorithm.cpp  test_container.cpp  test_executor.cpp
